--- a/static/style.css
+++ b/static/style.css
@@ -67,6 +67,7 @@ video {
 .subheading2{font-size: 4vw !important; margin:0em 0em 0em 0em}
 .subheading3{font-size: 30px!important;}
 .subheading4{font-size: 20px !important; margin:0em 0em 0em 0em}
+.instructions{font-size: 18px; margin:0em 0em 0em 0em}
 .button1{
     font-family: "poppins"; 
     align-self: center;
@@ -223,9 +224,15 @@ table, th, td, tr {
 .vmar2{margin:2em 0em 2em 0em}
 .pad-lr{padding:0em 0.4em 0em 0.4em}
 .slight-v-gradient{
-    background-image: linear-gradient(rgba(255, 255, 255, 0.07),rgba(255, 255, 255, 0.17));
+    /* backdrop filter that is a gradient of brightness */
+    background: linear-gradient(rgba(255, 255, 255, 0.07), rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.2) 100%);
+    backdrop-filter: brightness(1.05);
+    /* background-image: linear-gradient(rgba(255, 255, 255, 0.07),rgba(255, 255, 255, 0.17)); */
 }
-.name_input{width: 21em !important }
+.name_input{
+    max-width: 70vw;
+    width: 21em !important 
+}
 .invisible{visibility:hidden}
 .name_big{
     font-size:8vw;
@@ -248,6 +255,7 @@ table, th, td, tr {
 }
 .write-names-p{font-size: auto ;}
 .self-centered{align-self: center;}
+.text-centered{text-align: center;}
 .no-mar-top{margin-top: 0 !important;}
 
 /*background that took me way too long*/
