--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -14,7 +14,7 @@
             <h1 class="heading subheading4 pad-05em">
                 Edit Player Name
                 <div class="flex-h-start">
-                    <input type="text" id="username_change" value="{{username}}" maxlength="16">
+                    <input class="lobby-text-input" type="text" id="username_change" value="{{username}}" maxlength="16">
                     <button class="button2" onclick="username_change()">Save</button>
                 </div>
             </h1>
@@ -104,7 +104,7 @@
             <h1 class="heading subheading4 pad-05em">
                 Edit Team Name
                 <div class="flex-h-start">
-                    <input type="text" id="team_name_change" value="" maxlength="20">
+                    <input class="lobby-text-input" type="text" id="team_name_change" value="" maxlength="20">
                     <button class="button2" onclick="team_name_change()">Save</button>
                 </div>
             </h1>
