--- a/templates/write-names.html
+++ b/templates/write-names.html
@@ -13,10 +13,10 @@
         <div class="flex-v form pad-10pct">
             <div class="mar-b20">
                 <h1 class="heading subheading4">INSTRUCTIONS</h1>
-                <p class="option instructions slight-v-gradient">Write names that at least a few players will know.</p>
-                <p class="option instructions slight-v-gradient">Eg. celebrities, fictional characters, et cetera.</p>
-                <p class="option instructions slight-v-gradient">Players will need to read and describe them.</p>
-                <p class="option instructions slight-v-gradient">Use the random generator if you're struggling.</p>
+                <p class="option small-option instructions slight-v-gradient">Write names that at least a few players will know.</p>
+                <p class="option small-option instructions slight-v-gradient">Eg. celebrities, fictional characters, et cetera.</p>
+                <p class="option small-option instructions slight-v-gradient">Players will need to read and describe them.</p>
+                <p class="option small-option instructions slight-v-gradient">Use the random generator if you're struggling.</p>
             </div>
             <!-- <p class="write-names-p">
             </p> -->
