--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -60,9 +60,9 @@
                 
                 const newSocket = io.connect(window.origin, {query:"game_id={{game_id}}"})
 
-                newSocket.onAny((eventName, ...args) => {
-                    console.log(eventName, args)
-                })
+                // newSocket.onAny((eventName, ...args) => {
+                //     console.log(eventName, args)
+                // })
 
                 newSocket.on('emit_teams',function(msg) { 
                     teams = msg 
@@ -218,6 +218,7 @@
             }
 
             function startCountdown(is_player=true){
+                    if (interval.current){endCountdown()}//handles infinite loop issue
                     interval.current = setInterval(() => {
                     decrementCountdown(is_player);
                     }, 1000);
