--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,10 +7,9 @@
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     </head>
     <body class="lobby2 flex-v rainbow-gradient-bg animate-rainbow">
-        <h1 class="heading front-page">THE NAME GAME</h1>
-        <button class="button1 button3" onclick="location.href='create_game';">Create Game</button>
-        <button class="button1 button3" onclick="location.href='join_game';">Join Game</button>
-        <button class="button2 self-centered" onclick="location.href='readme';">Readme</button>
+        <h1 class="heading front-page" id="heading">THE NAME GAME</h1>
+        <button class="button1 button3" onclick="location.href='create_game';" id="create_game">Create Game</button>
+        <button class="button1 button3" onclick="location.href='join_game';" id="join_game">Join Game</button>
+        <button class="button2 self-centered" onclick="location.href='readme';" id="readme">Readme</button>
     </body>
 </html>
-        
