--- a/templates/readme.html
+++ b/templates/readme.html
@@ -1,5 +1,5 @@
 <head>
-    <style>body {font-family: consolas, verdana; background-color: rgb(34, 34, 34); color: rgb(200,200,200);}</style>
+    <style>body {font-family: consolas, verdana; background-color: rgb(34, 34, 34); color: rgb(200,200,200); margin: 20px;}</style>
     
 </head>
 <body>
