Bug fix - back after a graphs
Bug fix -Turn timer continued if you go back after a graph page

--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -115,7 +115,10 @@
                         ...prevState,
                         currentRound: current_round,
                     })) 
-                    if (is_new_round){location.href="/graphs/{{game_id}}"}
+                    if (is_new_round){
+                        endCountdown()
+                        location.href="/graphs/{{game_id}}"
+                    }
                 }) 
 
                 newSocket.on('advance_game_emit',function(msg) {
