--- a/static/style.css
+++ b/static/style.css
@@ -221,6 +221,8 @@ table, th, td, tr {
 .border{ border:  solid rgba(0, 0, 0, 0.20) 1px}
 .vmar{margin:0.8em 0em 0.8em 0em}
 .vmar-tiny{margin:0.2em 0em 0.2em 0em}
+.mt--1{margin-top: 0.2em !important;
+    margin-left: -3em !important;}
 .vmar2{margin:2em 0em 2em 0em}
 .pad-lr{padding:0em 0.4em 0em 0.4em}
 .slight-v-gradient{
@@ -259,6 +261,9 @@ table, th, td, tr {
 .no-mar-top{margin-top: 0 !important;}
 
 /*background that took me way too long*/
+.my{background: linear-gradient(-10deg,rgb(192, 45, 114), rgb(251, 62, 62));}
+.team{background: linear-gradient(-10deg,rgb(255, 180, 0), rgb(212, 255, 0));}
+.not{background: linear-gradient(-10deg,rgb(0, 255, 191),rgb(186, 129, 255));}
 .rainbow-gradient-bg{
     background: linear-gradient(55deg,rgb(192, 45, 114), rgb(251, 62, 62), rgb(255, 180, 0),rgb(246, 255, 0), rgb(0, 255, 191),rgb(186, 129, 255),rgb(254, 153, 200));
     background-size: 260% 260%;
@@ -346,6 +351,16 @@ table, th, td, tr {
 input:checked + .slider { background-color: rgba(0, 0, 0, 0.2) }
 input:focus + .slider { box-shadow: 0 0 1px linear-gradient(to bottom right, #e0e0e0, #F7F7F7); }
 input:checked + .slider:before { -webkit-transform: translateX(19px); -ms-transform: translateX(19px); transform: translateX(19px); }
+
+/*toggle switch smaller*/
+.switch2 { margin: 0em 0.6em 2px 4px; position: relative; display: inline-block; width: 36px; height: 20px; }
+.switch2 input { opacity: 0; width: 0; height: 0; }
+.slider2 { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(72, 72, 72, 0.676); -webkit-transition: .2s; transition: .2s; border-radius: 2px; 
+    box-shadow: inset 0 3px 10px rgb(0 0 0 / 0.3);}
+.slider2:before { position: absolute; content: ""; height: 14px; width: 14px; left: 4px; bottom: 4px; background-color: white; -webkit-transition: .2s; transition: .2s; border-radius: 2px;}
+input:checked + .slider2 { background-color: rgba(0, 0, 0, 0.2) }
+input:focus + .slider2 { box-shadow: 0 0 1px linear-gradient(to bottom right, #e0e0e0, #F7F7F7); }
+input:checked + .slider2:before { -webkit-transform: translateX(15px); -ms-transform: translateX(15px); transform: translateX(15px); }
 
 /* background-image: linear-gradient(30deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
 linear-gradient(150deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
